
- More accurate LIBOR calendars (thanks to Daniele de Francesco.)

- Added DKKLibor, EURLibor, and NZDLibor indexes.

- Added Bombay and Taipei calendars.

- Added configuration option for adding current function information
  to error messages

- Added Bates stochastic-volatility model; tests provided (thanks to
  Klaus Spanderen.)

- Added tabulated Gauss-Legendre quadratures (thanks to Gary Kennedy.)

- Added more precise implementation of bivariate cumulative normal
  distribution (thanks to Gary Kennedy.)