@@ -17,6 +17,7 @@ QuantLib is
     Copyright (C) 2003 Kawanishi Tomoya
     Copyright (C) 2004 Jeff Yu
 
+    Copyright (C) 2005 Toyin Akin
     Copyright (C) 2005 Serkan Atalik
     Copyright (C) 2005 Gary Kennedy
     Copyright (C) 2004, 2005 Klaus Spanderen
